public class Country {
    public final static String JAPAN = "Japan";
    public final static String VIETNAM = "Vietnam";
}
