public enum PenType {
    BALLPOINT, FOUNTAIN
}
