public class Tax {
    public final static double _8 = 0.08;
    public final static double _10 = 0.1;
}
